[project]
name = "linernodes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
linernodes = "linernodes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
