[project]
name = "linernodes"
version = "0.1.0"
description = "A CLI interface for music player"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "duckdb>=1.1.3",
    "python-mpd2>=3.1.1",
]

[project.scripts]
linernodes = "linernodes.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linernodes"]
