[project]
name = "linernodes"
version = "0.1.0"
description = "A CLI interface for music player"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "beets>=2.2.0",
    "click>=8.1.7",
    "duckdb>=1.1.3",
    "graphviz>=0.20.3",
    "musicbrainzngs>=0.7.1",
    "python-mpd2>=3.1.1",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "vit>=2.3.2",
    "xdg>=6.0.0",
]

[project.scripts]
linernodes = "linernodes.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linernodes"]
